prod_snapshot_2015-09-24_1030/objects/STARZ__c.object
<CustomObject>
    <fields>
        <fullName>Nominee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nominee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>STARZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STARZ_Event__c</fullName>
        <inlineHelpText>Describe the particular scenario or event that triggered your nomination.</inlineHelpText>
        <label>STARZ Event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special__c</fullName>
        <inlineHelpText>What is the general feeling you receive from this person when working with them. Not specific to any particular accomplishment, but rather how they contribute to the atmosphere of the workplace.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Helpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persistent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>STARZ1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>STARZ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Nominee__c</columns>
        <columns>Supervisor__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STZ-{00000000}</displayFormat>
        <label>STARZ ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STARZ</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>